# tpc

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  instructions.py  main.py  test  test.asm  test.s  test.txt  vcpkg.json
include/: asmgen.h  instructions.h
src/: asmgen.c  main.c  main.cpp
